# chat-app

./: .env  Cargo.toml  README.md
migrations/: 20250526114149_create_users_tickets_comments.sql
src/: main.rs
src/controllers/: mod.rs  ticket_controller.rs  userController.rs
src/middleware/: auth.rs  mod.rs  role_check.rs
src/models/: mod.rs  ticket.rs  users.rs
src/routes/: mod.rs
src/utils/: jwt.rs
