[package]
name = "chat-app-backend"
version = "0.1.0"
edition = "2024"
authors = ["Darshan Bhensdadia"]

[dependencies]
actix-service = "2.0.3"
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
tokio = { version="1.45.1", features = ["full"] }
uuid = { version ="1.17.0", features = ["v4"] }


